# DataStructures

./: .gitignore  README.md  report.md
PW/: CMakeLists.txt  README.md
PW/PW01/: ex01  ex01.cpp
PW/src/: TraversalMethods.cpp  bst  bst.cpp  crud.cpp  func.cpp  main.cpp  node.cpp  test
PW/src/include/: BST.h  crud.h  func.h  node.h
PW/src/lib/: crud.cpp  func.cpp
src/: main.cpp
src/include/: crud.h  func.h
src/lib/: func.cpp
test/: test.txt
